--- a/index.html
+++ b/index.html
@@ -89,7 +89,13 @@
              <td class="product__field">15 см</td>
            </tr>
          </table>
-         <img class="product__picture" src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="«Вязаные корзинки»">
+         <div>
+           <picture>
+             <source media="(min-width: 1150px)" srcset="img/triple-set-desktop@1x.jpg">
+             <source media="(min-width: 768px)" srcset="img/triple-set-tablet@1x.jpg">
+             <img class="product__picture" src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="«Вязаные корзинки»">
+           </picture>
+         </div>
          <b class="product__price">Цена: 990 руб.</b>
          <a href="form.html" class="product__order button">Заказать</a>
       </div>
@@ -144,8 +150,8 @@
       </div>
     </section>
     <section class="contacts">
-      <div class="contacts__wrapper  container">
-        <h2 class="contacts__title page-main__title">Контакты</h2>
+      <div class="contacts__wrapper">
+        <h2 class="page-main__title contacts__title">Контакты</h2>
         <table class="contacts__options">
           <tr class="contacts__row">
             <td class="contacts__option">e-mail:</td>
@@ -153,7 +159,7 @@
           </tr>
           <tr class="contacts__row">
             <td class="contacts__option">адрес:</td>
-            <td class="contacts__field">г. Санкт-Петербург,<br>ул. Большая<br>Конюшенная,<br>д. 19/8, офис 101</td>
+            <td class="contacts__field">г. Санкт-Петербург,<br>ул. Большая <br>Конюшенная,<br>д. 19/8, офис 101</td>
           </tr>
         </table>
       </div>
@@ -170,7 +176,7 @@
   </main>
 
   <footer class="page-footer container">
-    <img class="page-footer__logo" src="img/logo-mobile.svg" width="86" height="35" alt="«Mishka»">
+    <img class="page-footer__logo" src="img/logo-footer.svg" width="102" height="34" alt="«Mishka»">
     <div class="page-footer__social social">
         <b class="social__title visually-hidden">Давайте дружить!</b>
         <ul class="social__list">
@@ -195,21 +201,15 @@
     <p class="modal__text">Выберите размер:</p>
     <form class="form__modal" action="https://echo.htmlacademy.ru/" method="post">
       <div class="form__modal-size-list">
-        <input class="form__input  form__input--modal-checkbox visually-hidden" type="radio" id="s-size" name="s-size" value="S" checked>
+        <input class="form__input  form__input--modal-checkbox" type="radio" id="s-size" name="s-size" value="S" checked>
         <label class="form__label  form__label--modal-checkbox" for="s-size">S</label>
-        <input class="form__input  form__input--modal-checkbox visually-hidden" type="radio" id="m-size" name="m-size" value="M">
+        <input class="form__input  form__input--modal-checkbox" type="radio" id="m-size" name="m-size" value="M">
         <label class="form__label  form__label--modal-checkbox" for="m-size">M</label>
-        <input class="form__input  form__input--modal-checkbox visually-hidden" type="radio" id="l-size" name="l-size" value="L">
+        <input class="form__input  form__input--modal-checkbox" type="radio" id="l-size" name="l-size" value="L">
         <label class="form__label  form__label--modal-checkbox" for="l-size">L</label>
       </div>
       <input class="button modal__button" type="submit" value="Добавить">
     </form>
-    <!-- <ul class="modal__size-list">
-      <li class="modal__size-item modal__size-item--active">s</li>
-      <li class="modal__size-item">m</li>
-      <li class="modal__size-item">l</li>
-    </ul> -->
-
   </section>
   <script src="js/mobile-menu.js"></script>
   <script src="js/modal.js"></script>
