few improvements of  index desktop page

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <h2 class="page-main__title product__title">Вязаные корзинки</h2>
             <b class="product__label">Товар недели</b>
           </div>
-          <p class="product__intro">Экологически чистая пряжа,<br>ручная работа. Доступны в шести<br>расцветках, и трех размерах.</p>
+          <p class="product__intro">Экологически чистая пряжа,<br>ручная работа. Доступны в шести <br>расцветках, и трех размерах.</p>
           <table class="product__options">
             <tr class="product__row">
               <td class="product__option">Цвет:</td>
@@ -136,8 +136,7 @@
         <h2 class="reviews__title page-main__title">Отзывы</h2>
         <div class="reviews__list">
           <blockquote class="reviews__item">
-            <p class="reviews__text">Я молодая мама, но все равно фотографии не набирали и близко
-             такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
+            <p class="reviews__text">Я молодая мама, но все равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
            </blockquote>
             <cite class="reviews__author-name">Анастасия Красильникова</cite>
             <b class="reviews__author-user-name">@misssssiskras</b>
@@ -151,7 +150,7 @@
     </section>
     <section class="contacts">
       <div class="contacts__wrapper">
-        <h2 class="page-main__title contacts__title">Контакты</h2>
+        <h2 class="contacts__title page-main__title">Контакты</h2>
         <table class="contacts__options">
           <tr class="contacts__row">
             <td class="contacts__option">e-mail:</td>
