--- a/form.html
+++ b/form.html
@@ -6,7 +6,7 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="page-header main__wrapper container">
+    <header class="page-header container">
       <a class="page-header__logo" href="index.html">
         <picture>
           <source media="(min-width: 1150px)" srcset="img/mishka-logo-desktop.png">
@@ -14,8 +14,8 @@
           <img class="page-header__logo--image" src="img/logo-mobile.svg" width="86" height="35" alt="«Mishka»">
         </picture>
       </a>
-      <nav class="main-nav">
-        <button class="main-nav__toggle main-nav__toggle--open" type="button">Открыть меню</button>
+      <nav class="main-nav main-nav--opened">
+        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
           <ul class="main-nav__list main-nav__list--main">
             <li>
               <a class="main-nav__item main-nav__item--main" href="catalog.html">Каталог товаров</a>
@@ -26,10 +26,18 @@
           </ul>
           <ul class="main-nav__list main-nav__list--user">
             <li>
-              <a class="main-nav__item main-nav__item--search" href="#">Поиск по сайту</a>
+              <a class="main-nav__item main-nav__item--search" href="#">
+                <svg class="main-nav__item--search-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="17.6px" height="17.6px" viewBox="-0.8 -0.8 17.6 17.6" enable-background="new -0.8 -0.8 17.6 17.6" xml:space="preserve">
+                  <path fill="#d3d2d2" d="M16.47,14.93l-3.415-3.415C14.02,10.226,14.6,8.634,14.6,6.899c0-4.253-3.447-7.699-7.7-7.699 S-0.8,2.646-0.8,6.899s3.446,7.7,7.699,7.7c1.734,0,3.326-0.58,4.613-1.546l3.417,3.416c0.203,0.202,0.418,0.33,0.771,0.33 c0.607,0,1.1-0.492,1.1-1.1C16.8,15.459,16.739,15.2,16.47,14.93z M1.399,6.899c0-3.038,2.462-5.5,5.5-5.5s5.5,2.462,5.5,5.5 s-2.462,5.5-5.5,5.5S1.399,9.938,1.399,6.899z"/>
+                </svg>
+                Поиск по сайту</a>
             </li>
             <li>
-              <a class="main-nav__item main-nav__item--user" href="#">Корзина: пока пуста</a>
+              <a class="main-nav__item main-nav__item--user" href="#">
+                <svg class="main-nav__item--user-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20.294px" height="18.849px" viewBox="264.205 370.961 20.294 18.849" enable-background="new 264.205 370.961 20.294 18.849" xml:space="preserve">
+                  <path fill="#d3d2d2" d="M283.75,378.19h-3.151l-3.407-6.814c-0.185-0.37-0.634-0.52-1.006-0.335 c-0.371,0.186-0.521,0.636-0.335,1.006l3.071,6.143h-9.138l3.072-6.143c0.185-0.371,0.035-0.821-0.335-1.006 c-0.37-0.185-0.821-0.035-1.006,0.335l-3.407,6.814h-3.151c-0.414,0-0.75,0.336-0.75,0.75s0.336,0.75,0.75,0.75h0.157l0.855,2.991 c-0.187,0.137-0.316,0.347-0.316,0.595c0,0.396,0.309,0.71,0.697,0.739l1.656,5.795h12.697l1.656-5.795 c0.388-0.028,0.698-0.344,0.698-0.739c0-0.249-0.129-0.459-0.316-0.596l0.854-2.991h0.157c0.414,0,0.75-0.336,0.75-0.75 S284.164,378.19,283.75,378.19z M279.569,388.311h-10.433l-1.224-4.284h12.881L279.569,388.311z M281.222,382.526h-13.739 l-0.81-2.836h15.359L281.222,382.526z"/>
+                </svg>
+                Корзина: пока пуста</a>
             </li>
           </ul>
           <ul class="main-nav__list  main-nav__list--extra">
@@ -43,92 +51,125 @@
       </nav>
       <span class="page-header__delivery">Бесплатная доставка по России</span>
     </header>
-    <main class="page-main">
+    <main class="page-main container">
       <h1 class="page-main__main-title page-main__main-title--form">Вязание на заказ</h1>
-      <form class="order container" method="get" action="https://echo.htmlacademy.ru">
-        <p class="order__intoduction">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа
+      <form class="form container" method="get" action="https://echo.htmlacademy.ru">
+        <p class="form__intoduction">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа
           и мы свяжемся с вами, чтобы уточнить детали.</p>
-        <fieldset class="order__field order__field--type">
-          <legend class="order__title">Тип</legend>
-          <ul class="order__list type__list">
-            <li class="type__item">
-              <input class="visually-hidden type__input type__input-radio"
+        <fieldset class="form__field form__field--type">
+          <div class="form__field-wrapper">
+          <h2 class="form__field-title form__field-title--type">Тип</h2>
+          <ul class="form__list form__list--type">
+            <li class="form__item">
+              <input class="form__input form__input--radio"
               type="radio" name="type-option" value="interior" id="type-interior" checked>
-              <label class="order__label" for="type-interior">Аксессуар для интерьера</label>
+              <label class="form__label form__label--radio" for="type-interior">Аксессуар для интерьера</label>
             </li>
-            <li class="type__item">
-              <input class="visually-hidden type__input type__input-radio"
+            <li class="form__item">
+              <input class="form__input form__input--radio"
               type="radio" name="type-option" value="toys" id="type-toy">
-              <label class="order__label" for="type-toy">Детская игрушка</label>
+              <label class="form__label form__label--radio" for="type-toy">Детская игрушка</label>
             </li>
           </ul>
-      </fieldset>
-      <fieldset class="order__field order__field--color">
-        <legend class="order__title">Цвет</legend>
-        <ul class="order__list color__list">
-          <li class="color__item">
-            <input class="visually-hidden color__input color__input-checkbox"
-            type="checkbox" name="white" id="color-white" checked>
-            <label class="order__label" for="color-white">Белый</label>
-          </li>
-          <li class="color__item">
-            <input class="visually-hidden color__input color__input-checkbox"
-            type="checkbox" name="gray" id="color-gray" checked>
-            <label class="order__label" for="color-gray">Серый</label>
-          </li>
-          <li class="color__item">
-            <input class="visually-hidden color__input color__input-checkbox"
-            type="checkbox" name="tiffany" id="color-tiffany">
-            <label class="order__label" for="color-tiffany">«Тиффани»</label>
-          </li>
-          <li class="color__item">
-            <input class="visually-hidden color__input color__input-checkbox"
-            type="checkbox" name="black" id="color-black">
-            <label class="order__label" for="color-black">Черный</label>
-          </li>
-          <li class="color__item">
-            <input class="visually-hidden color__input color__input-checkbox"
-            type="checkbox" name="pink" id="color-pink">
-            <label class="order__label" for="color-pink">Розовый</label>
-          </li>
-          <li class="color__item">
-            <input class="visually-hidden color__input color__input-checkbox"
-            type="checkbox" name="orange" id="color-orange">
-            <label class="order__label" for="color-orange">Оранжевый</label>
-          </li>
-        </ul>
-      </fieldset>
-      <fieldset class="order__field order__client-data">
-        <legend class="order__title">ФИО</legend>
-        <div class="order__list order__client-data__list">
-        <label class="order__label client-data__title" for="order-name">Имя:</label>
-        <input class="order__input client-data__input" id="order-name" type="text" name="userName"
-          placeholder="Введите ваше имя*" required>
-        <label class="order__label client-data__title" for="order-surname">Фамилия:</label>
-        <input class="order__input client-data__input" id="order-surname" type="text" name="userSurname"
-          placeholder="Укажите фамилию*" required>
-        <label class="order__label client-data__title" for="order-middle-name">Отчество:</label>
-        <input class="order__input client-data__input" id="order-middle-name" type="text" name="userMiddlename"
-          placeholder="Отчество, если желаете">
         </div>
       </fieldset>
-      <fieldset class="order__field order__phone">
-        <label class="order__title phone__title" for="order-phone">Тел</label>
-        <input class="order__input client-data__input-phone" id="order-phone" type="tel" name="userPhone"
-          placeholder="+7 XXX XX XX*" required>
+      <fieldset class="form__field form__field--color">
+        <div class="form__field-wrapper">
+        <h2 class="form__field-title form__field-title--color">Цвет</h2>
+        <ul class="form__list form__list--color">
+          <li class="form__item form__item--color">
+            <input class="form__input form__input--checkbox"
+            type="checkbox" name="white" id="color-white" checked>
+            <label class="form__label form__label--checkbox" for="color-white">Белый</label>
+          </li>
+          <li class="form__item form__item--color">
+            <input class="form__input form__input--checkbox"
+            type="checkbox" name="gray" id="color-gray" checked>
+            <label class="form__label form__label--checkbox" for="color-gray">Серый</label>
+          </li>
+          <li class="form__item form__item--color">
+            <input class="form__input form__input--checkbox"
+            type="checkbox" name="tiffany" id="color-tiffany">
+            <label class="form__label form__label--checkbox" for="color-tiffany">«Тиффани»</label>
+          </li>
+          <li class="form__item form__item--color">
+            <input class="form__input form__input--checkbox"
+            type="checkbox" name="black" id="color-black">
+            <label class="form__label form__label--checkbox" for="color-black">Черный</label>
+          </li>
+          <li class="form__item form__item--color">
+            <input class="form__input form__input--checkbox"
+            type="checkbox" name="pink" id="color-pink">
+            <label class="form__label form__label--checkbox" for="color-pink">Розовый</label>
+          </li>
+          <li class="form__item form__item--color form__item--color-last">
+            <input class="form__input form__input--checkbox"
+            type="checkbox" name="orange" id="color-orange">
+            <label class="form__label form__label--checkbox" for="color-orange">Оранжевый</label>
+          </li>
+        </ul>
+      </div>
       </fieldset>
-      <fieldset class="order__field order__email">
-        <label class="order__title" for="order-email">E-mail</label>
-        <input class="order__input client-data__input-email" id="order-email" type="email" name="userEmail"
-          placeholder="Ваш E-mail*" required>
+      <fieldset class="form__field form__field--client-data">
+        <div class="form__field-wrapper">
+          <h2 class="form__field-title form__field-title--client-data">ФИО</h2>
+          <div class="form__list form__list--client-data">
+            <div class="form__field-wrapper">
+              <label class="form__label form__label--client-data" for="order-name">Имя:</label>
+              <input class="form__input-client-data" id="order-name" type="text" name="userName"
+                placeholder="Введите ваше имя*" required>
+            </div>
+            <div class="form__field-wrapper">
+              <label class="form__label form__label--client-data" for="order-surname">Фамилия:</label>
+              <input class="form__input-client-data" id="order-surname" type="text" name="userSurname"
+                placeholder="Укажите фамилию*" required>
+            </div>
+            <div class="form__field-wrapper">
+              <label class="form__label form__label--client-data" for="order-middle-name">Отчество:</label>
+              <input class="form__input-client-data" id="order-middle-name" type="text" name="userMiddlename"
+                placeholder="Отчество, если желаете">
+            </div>
+          </div>
+      </div>
       </fieldset>
-      <fieldset class="order__field order__additional">
-        <label class="order__title" for="order-message">Доп</label>
-        <textarea class="order__message" id="order-message" name="user-message" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+      <fieldset class="form__field form__field--phone">
+        <div class="form__field-wrapper">
+          <label class="form__field-title form__field-title--phone" for="order-phone">Тел</label>
+          <input class="form__input-client-data form__input-client-data--phone" id="order-phone" type="tel" name="userPhone" pattern="\+[0-9]{1} [0-9]{3} [0-9]{3} [0-9]{2} [0-9]{2}"
+            placeholder="+7 XXX XX XX*" required>
+          <svg class="form__input-client-data-icon form__input-client-data-icon--phone" version="1.1" id="Layer_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="24.829px" height="24.333px" viewBox="0 0 24.829 24.333" enable-background="new 0 0 24.829 24.333" xml:space="preserve">
+            <g>
+              <g id="UrwUhy_2_">
+                <g>
+                  <path fill="#cccccc" d="M17.321,24.333c-0.371,0-0.744,0-1.115,0c-4.904-0.58-8.497-2.857-11.11-5.772C2.473,15.637,0.402,11.875,0,6.817 c0-0.453,0-0.906,0-1.358c0.091-0.921,0.544-1.55,1.067-2.086c0.65-0.666,1.63-1.522,2.522-1.553 c0.659-0.022,1.78,0.451,2.232,1.066c0.388,0.53,0.595,1.59,0.775,2.378c0.185,0.797,0.6,1.95,0.485,2.717 C6.905,9.177,5.317,9.684,4.85,10.553c1.551,3.721,4.089,6.456,7.472,8.345c0.847-0.465,1.595-1.864,2.767-1.892 c0.428-0.012,0.972,0.209,1.406,0.34c0.477,0.143,0.891,0.326,1.311,0.484c0.705,0.266,1.957,0.621,2.378,1.213 c0.433,0.61,0.681,1.608,0.581,2.231C20.571,22.508,18.538,23.877,17.321,24.333z"/>
+                </g>
+              </g>
+              <path fill="#cccccc" d="M12.529,1.528c5.949,0,10.771,4.822,10.771,10.771h1.529C24.829,5.507,19.323,0,12.529,0V1.528z"/>
+              <path fill="#cccccc" d="M12.529,9.327v1.552c0.785,0,1.421,0.636,1.421,1.42h1.553C15.502,10.657,14.172,9.327,12.529,9.327z"/>
+              <path fill="#cccccc" d="M12.529,6.246c3.345,0,6.056,2.71,6.056,6.054h1.588c0-4.22-3.422-7.641-7.644-7.641V6.246z"/>
+            </g>
+          </svg>
+        </div>
       </fieldset>
-      <div class="order__wrapper">
-        <b class="order__comment">*Поля обязательны для заполнения</b>
-        <button class="button order-button" type="submit" >Отправить заказ</button>
+      <fieldset class="form__field form__field--email">
+        <div class="form__field-wrapper">
+          <label class="form__field-title form__field-title--email" for="order-email">E-mail</label>
+          <input class="form__input-client-data form__input-client-data--email" id="order-email" type="email" name="userEmail"
+            placeholder="Ваш E-mail*" required>
+          <svg class="form__input-client-data-icon form__input-client-data-icon--email" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="32px" height="32px" viewBox="0 0 32 32" enable-background="new 0 0 32 32" xml:space="preserve">
+            <path id="mail" fill="#cccccc" d="M28,5H4C1.791,5,0,6.792,0,9v13c0,2.209,1.791,4,4,4h24c2.209,0,4-1.791,4-4V9 C32,6.792,30.209,5,28,5z M2,10.25l6.999,5.25L2,20.75V10.25z M30,22c0,1.104-0.898,2-2,2H4c-1.103,0-2-0.896-2-2l7.832-5.875 l4.368,3.277c0.533,0.397,1.166,0.6,1.8,0.6c0.633,0,1.266-0.201,1.799-0.6l4.369-3.277L30,22L30,22z M30,20.75l-7-5.25l7-5.25 V20.75z M17.199,18.602c-0.35,0.263-0.763,0.4-1.199,0.4s-0.851-0.139-1.2-0.4L10.665,15.5l-0.833-0.625L2,9.001V9 c0-1.103,0.897-2,2-2h24c1.102,0,2,0.897,2,2L17.199,18.602z"/>
+          </svg>
+        </div>
+      </fieldset>
+      <fieldset class="form__field form__field--additional">
+        <div class="form__field-wrapper">
+          <label class="form__field-title form__field-title--additional" for="order-message">Доп</label>
+          <textarea class="form__message" id="order-message" name="user-message" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+        </div>
+      </fieldset>
+      <div class="form__wrapper">
+        <b class="form__comment">*Поля обязательны для заполнения</b>
+        <button class="button form__button" type="submit" >Отправить заказ</button>
       </div>
     </form>
   </main>
@@ -154,5 +195,6 @@
         <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">HTML Academy</span></a>
       </div>
   </footer>
+  <script src="js/mobile-menu.js"></script>
   </body>
   </html>
