--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
              <td class="product__field">15 см</td>
            </tr>
          </table>
-         <div>
+         <p class="product__image-wrapper">
            <picture>
-             <source media="(min-width: 1150px)" srcset="img/triple-set-desktop@1x.jpg">
-             <source media="(min-width: 768px)" srcset="img/triple-set-tablet@1x.jpg">
-             <img class="product__picture" src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="«Вязаные корзинки»">
+             <source media="(min-width: 1150px)" srcset="img/triple-set-desktop@1x.jpg 1x, img/triple-set-desktop@2x.jpg 2x">
+             <source media="(min-width: 768px)" srcset="img/triple-set-tablet@1x.jpg 1x, img/triple-set-tablet@2x.jpg 2x">
+             <img class="product__picture" src="img/triple-set-mobile@1x.jpg" srcset="img/triple-set-mobile@2x.jpg 2x" width="260" height="315" alt="«Вязаные корзинки»">
            </picture>
-         </div>
+         </p>
          <b class="product__price">Цена: 990 руб.</b>
          <a href="form.html" class="product__order button">Заказать</a>
       </div>
