--- a/catalog.html
+++ b/catalog.html
@@ -130,13 +130,13 @@
         </li>
       </ul>
       <section class="video">
-        <a class="video__play--wrapper">
+        <div class="video__play--wrapper">
           <picture>
             <source media="(min-width: 1150px)" srcset="img/video-desktop@1x.jpg 1x, img/video-desktop@2x.jpg 2x">
             <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
             <img class="video__play" src="img/video-mobile@1x.jpg" srcset="img/video-mobile@2x.jpg 2x" width="260" height="150" alt="Заставка видео">
           </picture>
-        </a>
+        </div>
         <div class="video__wrapper">
           <a href="#">
             <h2 class="video__title">Процесс производства</h2>
@@ -202,7 +202,9 @@
         </div>
         <div class="page-footer__copyright copyright">
           <a class="copyright__text" href="#">Разработано</a>
-          <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">HTML Academy</span></a>
+          <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60"><path fill="#63d1bb" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/></svg>
+            <span class="visually-hidden">HTML Academy</span></a>
         </div>
     </footer>
     <section class="modal-order main__wrapper">
