check of overflow

--- a/form.html
+++ b/form.html
@@ -105,7 +105,7 @@
             type="checkbox" name="pink" id="color-pink">
             <label class="form__label form__label--checkbox" for="color-pink">Розовый</label>
           </li>
-          <li class="form__item form__item--color form__item--color-last">
+          <li class="form__item form__item--color form__item--color">
             <input class="form__input form__input--checkbox"
             type="checkbox" name="orange" id="color-orange">
             <label class="form__label form__label--checkbox" for="color-orange">Оранжевый</label>
