--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <li>
                 <a class="main-nav__item main-nav__item--extra" href="#">Распродажа</a>
               </li>
-            </ul>
+          </ul>
           <span class="page-header__delivery">Бесплатная доставка по России</span>
       </nav>
     </header>
@@ -70,7 +70,7 @@
             <li class="products-type__item products-type__item--toys">
               <a class="products-type__link products-type__link--toys" href="#">Детские<br>игрушки</a>
             </li>
-          </ul>
+           </ul>
         </header>
         <div class="product__wrapper">
           <div class="product__wrapper--title">
@@ -80,7 +80,7 @@
           <p class="product__intro">Экологически чистая пряжа,<br>ручная работа. Доступны в шести <br>расцветках, и трех размерах.</p>
           <table class="product__options">
             <tr class="product__row">
-              <td class="product__option">Цвет:</td>
+              <td class="product__option">Цвет:Цвет:</td>
               <td class="product__field">«Тиффани»/серый</td>
             </tr>
            <tr class="product__row">
