--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <main class="page-main container">
 
       <h1 class="page-main__main-title page-main__main-title--main">Милые штуки<br> ручной<br> работы для дома</h1>
-
+<!-- секция Категории товаров -->
       <article class="products-type">
         <header class="products-type__header">
           <h2 class="visually-hidden">Категории товаров</h2>
@@ -72,6 +72,7 @@
             </li>
            </ul>
         </header>
+<!-- продукт "Вязаные корзинки" -->
         <div class="product__wrapper">
           <div class="product__wrapper--title">
             <h2 class="page-main__title product__title">Вязаные корзинки</h2>
@@ -103,6 +104,7 @@
          <a href="#" class="product__order button add-to-cart">Заказать</a>
       </div>
     </article>
+<!-- раздел "Коротко о нас" -->
     <section class="features">
       <div class="features__wrapper">
         <h2 class="features__title page-main__title">Коротко о нас:</h2>
@@ -134,6 +136,7 @@
         </ul>
       </div>
     </section>
+<!-- раздел отзывов -->
     <section class="reviews">
       <div class="reviews__wrapper">
         <h2 class="reviews__title page-main__title">Отзывы</h2>
@@ -151,6 +154,7 @@
         </div>
       </div>
     </section>
+<!-- раздел контакты -->
     <section class="contacts">
       <div class="contacts__wrapper">
         <h2 class="contacts__title page-main__title">Контакты</h2>
@@ -165,6 +169,7 @@
           </tr>
         </table>
       </div>
+<!-- раздел с картой -->
        <div class="map">
          <h2 class="visually-hidden">Как нас найти</h2>
          <iframe class="map__picture" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.603787253323!2d30.32085871572347!3d59.93871648187622!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2sBolshaya+Konyushennaya+Street%2C+19%2F8%2C+Sankt-Peterburg%2C+191186!5e0!3m2!1sen!2sru!4v1534187712363"
@@ -236,6 +241,7 @@
           <span class="visually-hidden">HTML Academy</span></a>
       </div>
   </footer>
+<!-- модальное окно - добавление товара в корзину -->
   <section class="modal-order container">
     <h2 class="modal__title">Добавить в корзину</h2>
     <p class="modal__text">Выберите размер:</p>
