--- a/catalog.html
+++ b/catalog.html
@@ -54,7 +54,7 @@
           <span class="page-header__delivery">Бесплатная доставка по России</span>
       </nav>
     </header>
-
+<!-- раздел списка товаров -->
     <main class="page-main container">
       <h1 class="page-main__main-title page-main__main-title--catalog">Каталог товаров</h1>
       <ul class="catalog__list">
@@ -131,6 +131,7 @@
           </div>
         </li>
       </ul>
+<!-- раздел видео-ролика процесса производства -->
       <section class="video">
         <div class="video__play--wrapper">
           <picture>
@@ -209,6 +210,7 @@
             <span class="visually-hidden">HTML Academy</span></a>
         </div>
     </footer>
+  <!-- модальное окно - добавление товара в корзину -->
     <section class="modal-order container">
       <h2 class="modal__title">Добавить в корзину</h2>
       <p class="modal__text">Выберите размер:</p>
