--- a/form.html
+++ b/form.html
@@ -120,17 +120,17 @@
             <div class="form__field-wrapper">
               <label class="form__label form__label--client-data" for="order-name">Имя:</label>
               <input class="form__input-client-data" id="order-name" type="text" name="userName"
-                placeholder="Введите ваше имя*" required>
+                placeholder="Введите ваше имя*" pattern="^[A-Za-zА-Яа-яЁё]+$" required>
             </div>
             <div class="form__field-wrapper">
               <label class="form__label form__label--client-data" for="order-surname">Фамилия:</label>
               <input class="form__input-client-data" id="order-surname" type="text" name="userSurname"
-                placeholder="Укажите фамилию*" required>
+                placeholder="Укажите фамилию*" pattern="^[A-Za-zА-Яа-яЁё]+$" required>
             </div>
             <div class="form__field-wrapper">
               <label class="form__label form__label--client-data" for="order-middle-name">Отчество:</label>
               <input class="form__input-client-data" id="order-middle-name" type="text" name="userMiddlename"
-                placeholder="Отчество, если желаете">
+                placeholder="Отчество, если желаете" pattern="^[A-Za-zА-Яа-яЁё]+$">
             </div>
           </div>
       </div>
@@ -138,8 +138,8 @@
       <fieldset class="form__field form__field--phone">
         <div class="form__field-wrapper">
           <label class="form__field-title form__field-title--phone" for="order-phone">Тел</label>
-          <input class="form__input-client-data form__input-client-data--phone" id="order-phone" type="tel" name="userPhone" pattern="\+[0-9]{1} [0-9]{3} [0-9]{3} [0-9]{2} [0-9]{2}"
-            placeholder="+7 XXX XX XX*" required>
+          <input class="form__input-client-data form__input-client-data--phone" id="order-phone" type="tel" name="userPhone" minlength="10" maxlength="11"
+          placeholder="+7 XXX XXХ ХХ XX*" required>
           <svg class="form__input-client-data-icon form__input-client-data-icon--phone" version="1.1" id="Layer_10" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="24.829px" height="24.333px" viewBox="0 0 24.829 24.333" enable-background="new 0 0 24.829 24.333" xml:space="preserve">
             <g>
               <g id="UrwUhy_2_">
@@ -232,10 +232,11 @@
       <div class="page-footer__copyright copyright">
         <a class="copyright__text" href="#">Разработано</a>
         <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <svg xmlns="http://www.w3.org/2000/svg" width="40x" height="40px" viewBox="0 0 60 60"><path fill="#63d1bb" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/></svg>
+          <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 60 60"><path fill="#63d1bb" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/></svg>
           <span class="visually-hidden">HTML Academy</span></a>
       </div>
   </footer>
   <script src="js/mobile-menu.js"></script>
+  <script src="js/form.js"></script>
   </body>
   </html>
