--- a/index.html
+++ b/index.html
@@ -70,12 +70,15 @@
         </li>
       </ul>
       <span class="page-header__delivery">Бесплатная доставка по России</span>
+      <div id="langlinks"></div>
     </nav>
   </header>
 
   <main class="page-main container">
 
-    <h1 class="page-main__main-title page-main__main-title--main">Милые штуки<br> ручной<br> работы для дома</h1>
+    <h1 class="page-main__main-title page-main__main-title--main">
+      <span>Милые штуки ручной работы для дома</span>
+    </h1>
     <!-- секция Категории товаров -->
     <article class="products-type">
       <header class="products-type__header">
@@ -83,10 +86,10 @@
         <ul class="products-type__list">
           <li class="products-type__item products-type__item--furnishings">
             <a class="products-type__link products-type__link--furnishings"
-              href="javascript:void(0)">Предметы<br>интерьера</a>
+              href="javascript:void(0)"><span>Предметы интерьера</span></a>
           </li>
           <li class="products-type__item products-type__item--toys">
-            <a class="products-type__link products-type__link--toys" href="javascript:void(0)">Детские<br>игрушки</a>
+            <a class="products-type__link products-type__link--toys" href="javascript:void(0)"><span>Детские игрушки</span></a>
           </li>
         </ul>
       </header>
@@ -94,13 +97,12 @@
       <div class="product__wrapper">
         <div class="product__wrapper--title">
           <h2 class="page-main__title product__title">Вязаные корзинки</h2>
-          <b class="product__label">Товар недели</b>
+          <p class="product__label">Товар недели</p>
         </div>
-        <p class="product__intro">Экологически чистая пряжа,<br>ручная работа. Доступны в шести <br>расцветках, и трех
-          размерах.</p>
+        <p class="product__intro">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
         <table class="product__options">
           <tr class="product__row">
-            <td class="product__option">Цвет:Цвет:</td>
+            <td class="product__option">Цвет:</td>
             <td class="product__field">«Тиффани»/серый</td>
           </tr>
           <tr class="product__row">
@@ -122,7 +124,7 @@
               width="260" height="315" alt="«Вязаные корзинки»">
           </picture>
         </p>
-        <b class="product__price">Цена: 990 руб.</b>
+        <p class="product__price">Цена: 990 руб.</p>
         <a href="javascript:void(0)" class="product__order button add-to-cart">Заказать</a>
       </div>
     </article>
@@ -134,32 +136,32 @@
           <li class="features__item features__item--eco">
             <img class="features__icon features__icon--eco" src="img/icon-feature-1.svg" width="32" height="37"
               alt="Иконка «Цветок»">
-            <p class="features__description">Экологически<br>чистые материалы</p>
+            <p class="features__description">Экологически чистые материалы</p>
           </li>
           <li class="features__item features__item--price">
             <img class="features__icon features__icon--price" src="img/icon-feature-3.svg" width="47" height="27"
               alt="Иконка «Купюра»">
-            <p class="features__description">Скандинавский стиль<br>по российской цене</p>
+            <p class="features__description">Скандинавский стиль по российской цене</p>
           </li>
           <li class="features__item features__item--likes">
             <img class="features__icon features__icon--likes" src="img/icon-feature-5.svg" width="34" height="27"
               alt="Иконка «Сердце»">
-            <p class="features__description">Увеличивает лайки<br>на фотографиях</p>
+            <p class="features__description">Увеличивает лайки на фотографиях</p>
           </li>
           <li class="features__item features__item--knitting">
             <img class="features__icon features__icon--knitting" src="img/icon-feature-2.svg" width="35" height="34"
               alt="Иконка «Клубок»">
-            <p class="features__description">Связано вручную с<br>любовью и умилением</p>
+            <p class="features__description">Связано вручную с любовью и умилением</p>
           </li>
           <li class="features__item features__item--rocket">
             <img class="features__icon features__icon--rocket" src="img/icon-feature-4.svg" width="55" height="23"
               alt="Иконка «Ракета»">
-            <p class="features__description">Поддержка отечественного<br>производителя</p>
+            <p class="features__description">Поддержка отечественного производителя</p>
           </li>
           <li class="features__item features__item--packed">
             <img class="features__icon features__icon--packed" src="img/icon-feature-6.svg" width="33" height="32"
               alt="Иконка «Подарок»">
-            <p class="features__description">Поставляется в<br>подарочной упаковке</p>
+            <p class="features__description">Поставляется в подарочной упаковке</p>
           </li>
         </ul>
       </div>
@@ -173,27 +175,21 @@
             <!-- Slides -->
             <div class="swiper-slide">
               <blockquote class="reviews__quote">
-                <p class="reviews__text">Я молодая мама, но все равно фотографии не набирали и близко такого количества
-                  лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои
-                  фотографии сразу стали более стильными, а также набирают больше лайков!</p>
+                <p class="reviews__text">Я молодая мама, но все равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
               </blockquote>
               <cite class="reviews__author-name">Анастасия Красильникова</cite>
               <b class="reviews__author-user-name">@misssssiskras</b>
             </div>
             <div class="swiper-slide">
               <blockquote class="reviews__quote">
-                <p class="reviews__text">Я молодая мама, но все равно фотографии не набирали и близко такого количества
-                  лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои
-                  фотографии сразу стали более стильными, а также набирают больше лайков!</p>
+                <p class="reviews__text">Я молодая мама, но все равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
               </blockquote>
               <cite class="reviews__author-name">Анастасия Красильникова</cite>
               <b class="reviews__author-user-name">@misssssiskras</b>
             </div>
             <div class="swiper-slide">
               <blockquote class="reviews__quote">
-                <p class="reviews__text">Я молодая мама, но все равно фотографии не набирали и близко такого количества
-                  лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои
-                  фотографии сразу стали более стильными, а также набирают больше лайков!</p>
+                <p class="reviews__text">Я молодая мама, но все равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
               </blockquote>
               <cite class="reviews__author-name">Анастасия Красильникова</cite>
               <b class="reviews__author-user-name">@misssssiskras</b>
@@ -201,12 +197,10 @@
           </div>
           <div class="reviews__links">
             <div class="swiper-button-prev reviews__link reviews__link--prev">
-              <span class="visually-hidden">Предыдущий
-                отзыв</span>
+              <span class="visually-hidden">Предыдущий отзыв</span>
             </div>
             <div class="swiper-button-next reviews__link reviews__link--next">
-              <span class="visually-hidden">Следующий
-                отзыв</span>
+              <span class="visually-hidden">Следующий отзыв</span>
             </div>
           </div>
         </div>
@@ -228,7 +222,7 @@
           </tr>
           <tr class="contacts__row">
             <td class="contacts__option">адрес:</td>
-            <td class="contacts__field">г. Санкт-Петербург,<br>ул. Большая <br>Конюшенная,<br>д. 19/8, офис 101</td>
+            <td class="contacts__field">г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101</td>
           </tr>
         </table>
       </div>
@@ -351,7 +345,9 @@
   <div class="overlay"></div>
   <script src="js/libs/swiper.min.js"></script>
   <script src="js/mobile-menu.js"></script>
-  <script src="js/modal.js"></script>
+	<script src="js/modal.js"></script>
+  <script src="js/main-page-translations.js"></script>
+  <script src="js/libs/lingumania.min.js"></script>
   <script type="text/javascript">
     var swiper = new Swiper(".swiper-container", {
       loop: true,
