--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <source media="(min-width: 768px)"
               srcset="img/triple-set-tablet@1x.jpg 1x, img/triple-set-tablet@2x.jpg 2x">
             <img class="product__picture" src="img/triple-set-mobile@1x.jpg" srcset="img/triple-set-mobile@2x.jpg 2x"
-              width="260" height="315" alt="«Вязаные корзинки»">
+              width="260" height="315" alt="«Knitted baskets»">
           </picture>
         </p>
         <p class="product__price">Цена: 990 руб.</p>
@@ -135,32 +135,32 @@
         <ul class="features__list">
           <li class="features__item features__item--eco">
             <img class="features__icon features__icon--eco" src="img/icon-feature-1.svg" width="32" height="37"
-              alt="Иконка «Цветок»">
+              alt="Icon «Flower»">
             <p class="features__description">Экологически чистые материалы</p>
           </li>
           <li class="features__item features__item--price">
             <img class="features__icon features__icon--price" src="img/icon-feature-3.svg" width="47" height="27"
-              alt="Иконка «Купюра»">
+              alt="Icon «Note»">
             <p class="features__description">Скандинавский стиль по российской цене</p>
           </li>
           <li class="features__item features__item--likes">
             <img class="features__icon features__icon--likes" src="img/icon-feature-5.svg" width="34" height="27"
-              alt="Иконка «Сердце»">
+              alt="Icon «Heard»">
             <p class="features__description">Увеличивает лайки на фотографиях</p>
           </li>
           <li class="features__item features__item--knitting">
             <img class="features__icon features__icon--knitting" src="img/icon-feature-2.svg" width="35" height="34"
-              alt="Иконка «Клубок»">
+              alt="Icon «Ball»">
             <p class="features__description">Связано вручную с любовью и умилением</p>
           </li>
           <li class="features__item features__item--rocket">
             <img class="features__icon features__icon--rocket" src="img/icon-feature-4.svg" width="55" height="23"
-              alt="Иконка «Ракета»">
+              alt="Icon «Rocket»">
             <p class="features__description">Поддержка отечественного производителя</p>
           </li>
           <li class="features__item features__item--packed">
             <img class="features__icon features__icon--packed" src="img/icon-feature-6.svg" width="33" height="32"
-              alt="Иконка «Подарок»">
+              alt="Icon «Gift»">
             <p class="features__description">Поставляется в подарочной упаковке</p>
           </li>
         </ul>
@@ -230,7 +230,7 @@
       <div class="map">
         <h2 class="visually-hidden">Как нас найти</h2>
         <iframe class="map__picture"
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.603787253323!2d30.32085871572347!3d59.93871648187622!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2sBolshaya+Konyushennaya+Street%2C+19%2F8%2C+Sankt-Peterburg%2C+191186!5e0!3m2!1sen!2sru!4v1534187712363"
+          src=""
           width="320" height="457" style="border:0" allowfullscreen>
         </iframe>
       </div>
@@ -344,9 +344,9 @@
   </section>
   <div class="overlay"></div>
   <script src="js/libs/swiper.min.js"></script>
-  <script src="js/mobile-menu.js"></script>
+  <script src="js/main.js"></script>
 	<script src="js/modal.js"></script>
-  <script src="js/main-page-translations.js"></script>
+  <script src="js/page-translations.js"></script>
   <script src="js/libs/lingumania.min.js"></script>
   <script type="text/javascript">
     var swiper = new Swiper(".swiper-container", {
