readme is modified

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
       <div class="map">
         <h2 class="visually-hidden">Как нас найти</h2>
         <iframe class="map__picture"
-          src=""
+          src="https://www.google.com/maps/d/embed?mid=1N1F1DEeN9OghGTzAkcA93_wL6H3x91Re&hl=en"
           width="320" height="457" style="border:0" allowfullscreen>
         </iframe>
       </div>
